<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_main">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="24dp"
            android:paddingTop="20dp"
            android:paddingEnd="24dp"
            android:paddingBottom="50dp">

                <ImageView
                    android:id="@+id/logo"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:adjustViewBounds="false"
                    android:scaleType="fitCenter"
                    android:src="@drawable/saint_cys_logo"
                    android:layout_marginEnd="20dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

                <TextView
                    android:id="@+id/main_username_txt"
                    android:layout_width="325dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:fontFamily="sans-serif-medium"
                    android:text="Your Health,\nYour Success,\nOur Mission"
                    android:textAlignment="center"
                    android:textAppearance="?attr/textAppearanceHeadlineLarge"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/logo" />

                <TextView
                    android:id="@+id/main_msg_text"
                    android:layout_width="325dp"
                    android:layout_height="wrap_content"
                    android:alpha="0.90"
                    android:textSize="16dp"
                    android:layout_marginTop="5dp"
                    android:textStyle="italic"
                    android:textAlignment="center"
                    android:text="Say yes to your good health."
                    android:textAppearance="?attr/textAppearanceBodyMedium"
                    android:textColor="@color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/main_username_txt" />

                <ImageView
                    android:id="@+id/hero_image"
                    android:layout_width="375dp"
                    android:layout_height="375dp"
                    android:layout_marginBottom="-10dp"
                    android:adjustViewBounds="false"
                    android:scaleType="centerCrop"
                    android:src="@drawable/doctors"
                    app:layout_constraintBottom_toTopOf="@id/main_login_btn"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.488"
                    app:layout_constraintStart_toStartOf="parent" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/main_login_btn"
                    android:layout_width="0dp"
                    android:layout_height="56dp"
                    android:letterSpacing=".07"
                    android:text="Get Started"
                    android:textSize="20dp"
                    app:backgroundTint="@color/saint_red"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/main_signup_btn"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/main_login_btn" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.bottomnavigation.BottomNavigationView
            style="@style/MyBottomNav"
            android:id="@+id/bottomNav"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_gravity="bottom"
            app:itemIconSize="32dp"
            app:itemPaddingTop="0dp"
            app:itemPaddingBottom="0dp"
            android:background="@color/saint_red"
            app:itemIconTint="@color/bottom_nav_item_color"
            app:itemTextColor="@color/bottom_nav_item_color"
            app:labelVisibilityMode="unlabeled"
            app:menu="@menu/bottom_nav_menu" />

        <com.project.saintcyshospital.MoreMenuLayout
            android:id="@+id/moreMenu"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

</FrameLayout>
